[gd_scene load_steps=26 format=3 uid="uid://bieijycfti3yp"]

[ext_resource type="Script" path="res://Escenas/trabajador.gd" id="1_j8hv2"]
[ext_resource type="Texture2D" uid="uid://bgnk3adn0lef1" path="res://Sprites/Final/dwarf_animation.png" id="2_l3840"]
[ext_resource type="PackedScene" uid="uid://egfw8x6vm44d" path="res://Escenas/oscuro.tscn" id="2_vtllr"]
[ext_resource type="PackedScene" uid="uid://bg86ff6lnnk5s" path="res://Escenas/sensor.tscn" id="3_6fccv"]
[ext_resource type="PackedScene" uid="uid://dldjoxoxs212t" path="res://Escenas/iluminado.tscn" id="3_l0y1y"]
[ext_resource type="Shader" path="res://Shaders/trabajador.gdshader" id="4_65m30"]
[ext_resource type="Texture2D" uid="uid://ddaq1fkr8ld8n" path="res://Sprites/Alma.png" id="4_y8xla"]
[ext_resource type="AudioStream" uid="uid://c45iwbyuxagkw" path="res://audio/SFX/death/death (1).wav" id="5_irh7l"]
[ext_resource type="AudioStream" uid="uid://c7m5203v34p37" path="res://audio/SFX/steps/steps-01.wav" id="6_bvbxb"]
[ext_resource type="AudioStream" uid="uid://b00lefe46uyyu" path="res://audio/SFX/steps/steps-04.wav" id="7_jh1d8"]
[ext_resource type="AudioStream" uid="uid://cgtjwp67ycipe" path="res://audio/SFX/steps/steps-03.wav" id="8_ne1rn"]
[ext_resource type="AudioStream" uid="uid://dndyvutapcpgr" path="res://audio/SFX/dig/dig (1).wav" id="8_rvsna"]

[sub_resource type="BoxShape3D" id="BoxShape3D_w23wv"]
size = Vector3(0.3, 0.05, 0.3)

[sub_resource type="Animation" id="Animation_rvx5b"]
resource_name = "Die"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56, 57, 58, 61, 59, 60, 59, 61]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminarme"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_irh7l")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_wxxxn"]
resource_name = "Drag"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42, 43, 44, 45]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_ne1rn")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_jh1d8")
}],
"times": PackedFloat32Array(0, 0.434821)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_v33qx"]
resource_name = "Move"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_bvbxb")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_ne1rn")
}],
"times": PackedFloat32Array(0, 0.350055)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_cbyue"]
resource_name = "Picar"
length = 1.3
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"picar"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_rvsna")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_3y2gl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_28tu3"]
resource_name = "Standing"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btfcu"]
_data = {
"Die": SubResource("Animation_rvx5b"),
"Drag": SubResource("Animation_wxxxn"),
"Move": SubResource("Animation_v33qx"),
"Picar": SubResource("Animation_cbyue"),
"RESET": SubResource("Animation_3y2gl"),
"Standing": SubResource("Animation_28tu3")
}

[sub_resource type="Animation" id="Animation_mploj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_usmea"]
resource_name = "vibe"
length = 0.88
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33, 0.44, 0.55, 0.66, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhtlj"]
_data = {
"RESET": SubResource("Animation_mploj"),
"vibe": SubResource("Animation_usmea")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hnmbd"]
shader = ExtResource("4_65m30")
shader_parameter/new_colour = Color(1, 1, 1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_pcp6t"]
viewport_path = NodePath("SubViewport")

[node name="Trabajador" type="CharacterBody3D" groups=["Trabajador"]]
collision_mask = 0
script = ExtResource("1_j8hv2")
oscuro = ExtResource("2_vtllr")
iluminado = ExtResource("3_l0y1y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 2.59808, -1.5, 0, 1.5, 2.59808, 0.0151331, 0.001607, 0.0540746)
shape = SubResource("BoxShape3D_w23wv")

[node name="Idle" type="Sprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 1.02606, 2.81908, 0, -2.81908, 1.02606, 0, 0, 0)
sorting_offset = 2.0
texture_filter = 2
texture = ExtResource("2_l3840")
hframes = 13
vframes = 5
frame = 1

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_btfcu")
}

[node name="Node" type="Node" parent="."]

[node name="SensorMinerales" parent="." instance=ExtResource("3_6fccv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 0
collision_mask = 2

[node name="SensorNave" parent="." instance=ExtResource("3_6fccv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 0
collision_mask = 4

[node name="SensorOscuro" parent="." instance=ExtResource("3_6fccv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 0
collision_mask = 32

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(120, 120)
render_target_update_mode = 4

[node name="AnimationSoul" type="AnimationPlayer" parent="SubViewport"]
libraries = {
"": SubResource("AnimationLibrary_bhtlj")
}

[node name="Sprite2D" type="Sprite2D" parent="SubViewport"]
material = SubResource("ShaderMaterial_hnmbd")
position = Vector2(60, 64)
texture = ExtResource("4_y8xla")
hframes = 8
frame = 1

[node name="IndicadorAlma" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 0.425503, -1.09998)
texture = SubResource("ViewportTexture_pcp6t")

[node name="SensorIluminado" parent="." instance=ExtResource("3_6fccv")]
collision_layer = 0
collision_mask = 64

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"
